<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:layout_width="match_parent"
        android:scrollbarThumbVertical="@color/gainsboro"
        android:fadeScrollbars="false"
        android:layout_height="match_parent">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <TextView
                android:id="@+id/textViewTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ex3_text_title"
                android:textSize="16dp"
                android:textStyle="bold"
                android:paddingTop="16dp"
                android:paddingBottom="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/contents_padding"
                android:text="@string/ex3_text_1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewTitle"/>

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:src="@drawable/explanation_interest_fragment"
                android:scaleType="fitCenter"
                android:adjustViewBounds="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView"
                app:layout_constraintBottom_toTopOf="@+id/textView2"/>

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ex3_text_2"
                android:paddingTop="32dp"
                app:layout_constraintTop_toBottomOf="@+id/imageView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:src="@drawable/explanation_interest_fragment_2"
                android:scaleType="fitCenter"
                android:adjustViewBounds="true"
                android:layout_marginTop="@dimen/contents_padding"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView2" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="32dp"
                android:text="@string/ex3_text_3"
                app:layout_constraintTop_toBottomOf="@+id/imageView2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:src="@drawable/explanation_input_interest_activity"
                android:scaleType="fitCenter"
                android:adjustViewBounds="true"
                android:layout_marginTop="@dimen/contents_padding"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView3" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>
